Fixed start command in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,5 @@
     "PORT": "${PORT}",
     "DSN": "${DSN}"
   },
-  "postStartCommand": "npx --yes pm2 start app.mjs "
+  "postStartCommand": "npx --yes pm2 start /src/app.mjs "
 }
